--- a/main.css
+++ b/main.css
@@ -1,47 +1,33 @@
 /* main.css */
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Poor+Story&display=swap');
 
+/* main.css */
 body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
 }
+
 header {
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    padding: 20px; /* 헤더 패딩 조절 */
     text-align: right;
     position: relative;
-    overflow: hidden; /* 마우스 물방울이 헤더를 벗어나지 않도록 함 */
-}
-#bulge {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: rgba(255, 215, 0, 0.5); /* 노란색으로 채워진 원 */
-    border-radius: 50%;
-    opacity: 0;
-    transition: transform 0.5s ease, opacity 0.5s ease; /* 애니메이션 속성 추가 */
+    overflow: hidden;
 }
 
-header:hover #bulge {
-    opacity: 1;
-    animation: moveBulge 10s infinite; /* 마우스 따라다니는 애니메이션 추가 */
-}
-
-@keyframes moveBulge {
-    to {
-        transform: translate(-50%, -50%) scale(8); /* 크기를 키우고 마우스 위치로 이동 */
-    }
-}
 .header-content {
     display: flex;
     justify-content: space-between;
+    align-items: center; /* 센터 정렬 추가 */
 }
 
 .header-title {
     font-family: 'Poor Story', cursive;
-    font-size: 36px; /* 글자 크기 변경 */
+    font-size: 36px;
+    margin-right: 20px; /* 제목과 네비게이션 간격 조절 */
 }
 
 nav ul {
@@ -52,30 +38,69 @@ nav ul {
 }
 
 nav ul li {
-    margin-left: 15px;
+    margin-left: 30px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
+    font-size: 18px; /* 네비게이션 글자 크기 조절 */
 }
 
-.welcome-content {
-    text-align: center;
-    padding: 1px;
-    opacity: 1;
-    transition: opacity 3s ease-in-out; /* 3초 동안 투명도를 변경하는 애니메이션 추가 */
+#image-grid {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .image-box {
+    flex: 1;
+    position: relative;
+  }
+
+  .image-link {
+    display: block;
+  }
+  .image {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    filter: brightness(30%); /* 이미지를 투명한 검은색으로 만듭니다 */
+    transition: filter 0.5s; /* 마우스를 올리면 원래의 이미지로 바뀝니다. */
 }
+
+.image-box:hover .image {
+    filter: brightness(100%);
+}
+
+.image-box:hover .image-caption {
+    font-size: 40px; /* 원하는 크기로 설정 */
+}
+
+.image-caption {
+    font-family: 'Nanum Myeongjo', serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: font-size 0.5s;
+}
+
 
 footer {
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    padding: 20px; /* 푸터 패딩 조절 */
     text-align: center;
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 20px; /* 푸터 상단 마진 추가 */
 }
 
 .footer-title {
