--- a/main.css
+++ b/main.css
@@ -97,7 +97,7 @@ footer {
     color: #fff;
     padding: 20px; /* 푸터 패딩 조절 */
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     margin-top: 20px; /* 푸터 상단 마진 추가 */
