--- a/reservation.css
+++ b/reservation.css
@@ -17,14 +17,15 @@ body {
     border-radius: 5px;
     background-color: #fff;
     margin-bottom: 20px;
+    height: 90%;
 }
 
 #reservationForm select, #reservationForm input[type="number"], #reservationForm input[type="text"] {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 3px;
-    font-size: 1em;
+    font-size: 2em;
     width: 100%;
     box-sizing: border-box;
 }
