--- a/index.css
+++ b/index.css
@@ -1,5 +1,17 @@
 /* index.css */
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+/* 1. 애니메이션 지정 */
+/* 1. 애니메이션 지정 */
+@keyframes change-background {
+    0% {background-color: #f3fb07;}
+    20% {background-color: #b21f1f;}
+    40% {background-color: #fdbb2d;}
+    60% {background-color: #1a2a6c;}
+    80% {background-color: #b21f1f;}
+    100% {background-color: #fdbb2d;}
+}
+
+/* 2. 애니메이션 적용 */
 body {
     font-family: 'Poor Story', cursive;
     margin: 0;
@@ -8,9 +20,13 @@ body {
     align-items: center;
     height: 100vh; /* 브라우저 뷰포트 높이로 설정 */
     min-height: 100%; /* 최소 높이를 100%로 설정 */
-    background-color: rgb(5, 5, 40);
+    background-color: #1a2a6c;
     overflow: hidden;
+
+    /* 배경색 변경 애니메이션 적용 */
+    animation: change-background 20s ease-in-out infinite; /* 이름, 지속시간, 가속도, 반복횟수 */
 }
+
 
 .container {
     width: 100%;
