--- a/main.css
+++ b/main.css
@@ -26,8 +26,8 @@ header {
 
 .header-title {
     font-family: 'Poor Story', cursive;
-    font-size: 36px;
-    margin-right: 20px; /* 제목과 네비게이션 간격 조절 */
+    font-size: 50px;
+    margin-right: 10px;
 }
 
 nav ul {
